autopilot-qt (0.3-0ubuntu1) UNRELEASED; urgency=low

  * debian/control:
    - Wrap, sort and add trailing commas to (Build-)Depends lists.
    - Bump Build-Depends on debhelper to 9.
    - Add Vcs-Bzr, Vcs-Browser and a notice to uploaders.
  * debian/compat: bump to compat level 9.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 27 Nov 2012 18:04:58 -0500

autopilot-qt (0.2) quantal; urgency=low

  * Release

 -- Michael Zanetti <michael.zanetti@canonical.com>  Wed, 14 Nov 2012 16:55:45 +0100

autopilot-qt (0.1) quantal; urgency=low

  * Initial release

 -- Michael Zanetti <michael.zanetti@canonical.com>  Mon, 08 Oct 2012 14:23:32 +0200